Tabla de los vcfstats completa

--- a/code/analysis/notebooks/annotations.ipynb
+++ b/code/analysis/notebooks/annotations.ipynb
@@ -1680,7 +1680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1921,7 +1921,7 @@
        "11  ERR753378  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1934,7 +1934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2327,7 +2327,7 @@
        "11          0.97                  0.08  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2347,29 +2347,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "r_snp_transition_transversion\n",
-      "r_total_het_hom\n",
-      "r_snp_het_hom\n",
-      "r_mnp_het_hom\n",
-      "r_Insert_het_hom\n",
-      "r_del_het_hom\n",
-      "r_Indel_het_hom\n",
-      "r_insert_del\n",
-      "r_indel_snp_plus_mnp\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_69972/883756158.py:2: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "/tmp/ipykernel_3405/1472517112.py:2: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
       "  vcf_stats[name] = \"(\" + vcf_stats[name].str.replace(\"|\", \"/\") + \")\"\n"
      ]
     }
@@ -2379,13 +2364,24 @@
     "    vcf_stats[name] = \"(\" + vcf_stats[name].str.replace(\"|\", \"/\") + \")\"\n",
     "    \n",
     "for name,r_name in zip(vcf_stats.iloc[:,:9].columns, vcf_stats.iloc[:,10:].columns):\n",
-    "    vcf_stats[name] = vcf_stats[r_name] + \" \" + vcf_stats[name]\n",
+    "    vcf_stats[name] = vcf_stats[r_name].astype(str) + \" \" + vcf_stats[name]\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vcf_stats = vcf_stats.iloc[:,:10]\n",
+    "\n",
+    "vcf_stats.to_csv(\"../results_analysis/tables/additional_vcf_stats.tsv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2418,194 +2414,221 @@
        "      <th>Indel_het_hom</th>\n",
        "      <th>insert_del</th>\n",
        "      <th>indel_snp_plus_mnp</th>\n",
+       "      <th>sample</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>16969|7054</td>\n",
-       "      <td>10718|7898</td>\n",
-       "      <td>9729|7144</td>\n",
-       "      <td>254|104</td>\n",
-       "      <td>323|322</td>\n",
-       "      <td>389|302</td>\n",
-       "      <td>23|26</td>\n",
-       "      <td>645|691</td>\n",
-       "      <td>1385|17231</td>\n",
+       "      <td>2.41 (16969/7054)</td>\n",
+       "      <td>1.36 (10718/7898)</td>\n",
+       "      <td>1.36 (9729/7144)</td>\n",
+       "      <td>2.44 (254/104)</td>\n",
+       "      <td>1.0 (323/322)</td>\n",
+       "      <td>1.29 (389/302)</td>\n",
+       "      <td>0.88 (23/26)</td>\n",
+       "      <td>0.93 (645/691)</td>\n",
+       "      <td>0.08 (1385/17231)</td>\n",
+       "      <td>ERR696683</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>22790|9589</td>\n",
-       "      <td>14288|10835</td>\n",
-       "      <td>12891|9739</td>\n",
-       "      <td>371|148</td>\n",
-       "      <td>480|469</td>\n",
-       "      <td>497|447</td>\n",
-       "      <td>49|32</td>\n",
-       "      <td>949|944</td>\n",
-       "      <td>1974|23149</td>\n",
+       "      <td>2.38 (22790/9589)</td>\n",
+       "      <td>1.32 (14288/10835)</td>\n",
+       "      <td>1.32 (12891/9739)</td>\n",
+       "      <td>2.51 (371/148)</td>\n",
+       "      <td>1.02 (480/469)</td>\n",
+       "      <td>1.11 (497/447)</td>\n",
+       "      <td>1.53 (49/32)</td>\n",
+       "      <td>1.01 (949/944)</td>\n",
+       "      <td>0.09 (1974/23149)</td>\n",
+       "      <td>ERR753368</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>22316|9338</td>\n",
-       "      <td>14172|10542</td>\n",
-       "      <td>12726|9458</td>\n",
-       "      <td>368|167</td>\n",
-       "      <td>472|462</td>\n",
-       "      <td>560|422</td>\n",
-       "      <td>46|33</td>\n",
-       "      <td>934|982</td>\n",
-       "      <td>1995|22719</td>\n",
+       "      <td>2.39 (22316/9338)</td>\n",
+       "      <td>1.34 (14172/10542)</td>\n",
+       "      <td>1.35 (12726/9458)</td>\n",
+       "      <td>2.2 (368/167)</td>\n",
+       "      <td>1.02 (472/462)</td>\n",
+       "      <td>1.33 (560/422)</td>\n",
+       "      <td>1.39 (46/33)</td>\n",
+       "      <td>0.95 (934/982)</td>\n",
+       "      <td>0.09 (1995/22719)</td>\n",
+       "      <td>ERR753369</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>27387|11651</td>\n",
-       "      <td>17992|12977</td>\n",
-       "      <td>16009|11510</td>\n",
-       "      <td>484|176</td>\n",
-       "      <td>614|615</td>\n",
-       "      <td>807|626</td>\n",
-       "      <td>78|50</td>\n",
-       "      <td>1229|1433</td>\n",
-       "      <td>2790|28179</td>\n",
+       "      <td>2.35 (27387/11651)</td>\n",
+       "      <td>1.39 (17992/12977)</td>\n",
+       "      <td>1.39 (16009/11510)</td>\n",
+       "      <td>2.75 (484/176)</td>\n",
+       "      <td>1.0 (614/615)</td>\n",
+       "      <td>1.29 (807/626)</td>\n",
+       "      <td>1.56 (78/50)</td>\n",
+       "      <td>0.86 (1229/1433)</td>\n",
+       "      <td>0.1 (2790/28179)</td>\n",
+       "      <td>ERR753370</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>12222|4926</td>\n",
-       "      <td>7327|5748</td>\n",
-       "      <td>6639|5253</td>\n",
-       "      <td>208|79</td>\n",
-       "      <td>198|205</td>\n",
-       "      <td>266|196</td>\n",
-       "      <td>16|15</td>\n",
-       "      <td>403|462</td>\n",
-       "      <td>896|12179</td>\n",
+       "      <td>2.48 (12222/4926)</td>\n",
+       "      <td>1.27 (7327/5748)</td>\n",
+       "      <td>1.26 (6639/5253)</td>\n",
+       "      <td>2.63 (208/79)</td>\n",
+       "      <td>0.97 (198/205)</td>\n",
+       "      <td>1.36 (266/196)</td>\n",
+       "      <td>1.07 (16/15)</td>\n",
+       "      <td>0.87 (403/462)</td>\n",
+       "      <td>0.07 (896/12179)</td>\n",
+       "      <td>ERR753371</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>22773|9639</td>\n",
-       "      <td>14808|10579</td>\n",
-       "      <td>13331|9536</td>\n",
-       "      <td>391|141</td>\n",
-       "      <td>475|439</td>\n",
-       "      <td>559|427</td>\n",
-       "      <td>52|36</td>\n",
-       "      <td>914|986</td>\n",
-       "      <td>1988|23399</td>\n",
+       "      <td>2.36 (22773/9639)</td>\n",
+       "      <td>1.4 (14808/10579)</td>\n",
+       "      <td>1.4 (13331/9536)</td>\n",
+       "      <td>2.77 (391/141)</td>\n",
+       "      <td>1.08 (475/439)</td>\n",
+       "      <td>1.31 (559/427)</td>\n",
+       "      <td>1.44 (52/36)</td>\n",
+       "      <td>0.93 (914/986)</td>\n",
+       "      <td>0.08 (1988/23399)</td>\n",
+       "      <td>ERR753372</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>25705|12262</td>\n",
-       "      <td>12251|14997</td>\n",
-       "      <td>10881|13538</td>\n",
-       "      <td>369|210</td>\n",
-       "      <td>438|598</td>\n",
-       "      <td>522|603</td>\n",
-       "      <td>41|48</td>\n",
-       "      <td>1036|1125</td>\n",
-       "      <td>2250|24998</td>\n",
+       "      <td>2.1 (25705/12262)</td>\n",
+       "      <td>0.82 (12251/14997)</td>\n",
+       "      <td>0.8 (10881/13538)</td>\n",
+       "      <td>1.76 (369/210)</td>\n",
+       "      <td>0.73 (438/598)</td>\n",
+       "      <td>0.87 (522/603)</td>\n",
+       "      <td>0.85 (41/48)</td>\n",
+       "      <td>0.92 (1036/1125)</td>\n",
+       "      <td>0.09 (2250/24998)</td>\n",
+       "      <td>ERR753373</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>14105|6359</td>\n",
-       "      <td>7057|7935</td>\n",
-       "      <td>6290|7083</td>\n",
-       "      <td>198|116</td>\n",
-       "      <td>260|338</td>\n",
-       "      <td>292|368</td>\n",
-       "      <td>17|30</td>\n",
-       "      <td>598|660</td>\n",
-       "      <td>1305|13687</td>\n",
+       "      <td>2.22 (14105/6359)</td>\n",
+       "      <td>0.89 (7057/7935)</td>\n",
+       "      <td>0.89 (6290/7083)</td>\n",
+       "      <td>1.71 (198/116)</td>\n",
+       "      <td>0.77 (260/338)</td>\n",
+       "      <td>0.79 (292/368)</td>\n",
+       "      <td>0.57 (17/30)</td>\n",
+       "      <td>0.91 (598/660)</td>\n",
+       "      <td>0.1 (1305/13687)</td>\n",
+       "      <td>ERR753374</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>14455|5814</td>\n",
-       "      <td>9045|6579</td>\n",
-       "      <td>8214|6024</td>\n",
-       "      <td>231|66</td>\n",
-       "      <td>267|227</td>\n",
-       "      <td>309|240</td>\n",
-       "      <td>24|22</td>\n",
-       "      <td>494|549</td>\n",
-       "      <td>1089|14535</td>\n",
+       "      <td>2.49 (14455/5814)</td>\n",
+       "      <td>1.37 (9045/6579)</td>\n",
+       "      <td>1.36 (8214/6024)</td>\n",
+       "      <td>3.5 (231/66)</td>\n",
+       "      <td>1.18 (267/227)</td>\n",
+       "      <td>1.29 (309/240)</td>\n",
+       "      <td>1.09 (24/22)</td>\n",
+       "      <td>0.9 (494/549)</td>\n",
+       "      <td>0.07 (1089/14535)</td>\n",
+       "      <td>ERR753375</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>15428|6239</td>\n",
-       "      <td>9112|7376</td>\n",
-       "      <td>8256|6705</td>\n",
-       "      <td>224|94</td>\n",
-       "      <td>265|261</td>\n",
-       "      <td>342|287</td>\n",
-       "      <td>25|29</td>\n",
-       "      <td>526|629</td>\n",
-       "      <td>1209|15279</td>\n",
+       "      <td>2.47 (15428/6239)</td>\n",
+       "      <td>1.24 (9112/7376)</td>\n",
+       "      <td>1.23 (8256/6705)</td>\n",
+       "      <td>2.38 (224/94)</td>\n",
+       "      <td>1.02 (265/261)</td>\n",
+       "      <td>1.19 (342/287)</td>\n",
+       "      <td>0.86 (25/29)</td>\n",
+       "      <td>0.84 (526/629)</td>\n",
+       "      <td>0.08 (1209/15279)</td>\n",
+       "      <td>ERR753376</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>15435|6302</td>\n",
-       "      <td>9659|7125</td>\n",
-       "      <td>8761|6485</td>\n",
-       "      <td>221|87</td>\n",
-       "      <td>286|259</td>\n",
-       "      <td>369|266</td>\n",
-       "      <td>22|28</td>\n",
-       "      <td>545|635</td>\n",
-       "      <td>1230|15554</td>\n",
+       "      <td>2.45 (15435/6302)</td>\n",
+       "      <td>1.36 (9659/7125)</td>\n",
+       "      <td>1.35 (8761/6485)</td>\n",
+       "      <td>2.54 (221/87)</td>\n",
+       "      <td>1.1 (286/259)</td>\n",
+       "      <td>1.39 (369/266)</td>\n",
+       "      <td>0.79 (22/28)</td>\n",
+       "      <td>0.86 (545/635)</td>\n",
+       "      <td>0.08 (1230/15554)</td>\n",
+       "      <td>ERR753377</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>21762|9081</td>\n",
-       "      <td>13585|10286</td>\n",
-       "      <td>12330|9251</td>\n",
-       "      <td>302|145</td>\n",
-       "      <td>414|459</td>\n",
-       "      <td>503|397</td>\n",
-       "      <td>36|34</td>\n",
-       "      <td>873|900</td>\n",
-       "      <td>1843|22028</td>\n",
+       "      <td>2.4 (21762/9081)</td>\n",
+       "      <td>1.32 (13585/10286)</td>\n",
+       "      <td>1.33 (12330/9251)</td>\n",
+       "      <td>2.08 (302/145)</td>\n",
+       "      <td>0.9 (414/459)</td>\n",
+       "      <td>1.27 (503/397)</td>\n",
+       "      <td>1.06 (36/34)</td>\n",
+       "      <td>0.97 (873/900)</td>\n",
+       "      <td>0.08 (1843/22028)</td>\n",
+       "      <td>ERR753378</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   snp_transition_transversion total_het_hom  snp_het_hom mnp_het_hom  \\\n",
-       "0                   16969|7054    10718|7898    9729|7144     254|104   \n",
-       "1                   22790|9589   14288|10835   12891|9739     371|148   \n",
-       "2                   22316|9338   14172|10542   12726|9458     368|167   \n",
-       "3                  27387|11651   17992|12977  16009|11510     484|176   \n",
-       "4                   12222|4926     7327|5748    6639|5253      208|79   \n",
-       "5                   22773|9639   14808|10579   13331|9536     391|141   \n",
-       "6                  25705|12262   12251|14997  10881|13538     369|210   \n",
-       "7                   14105|6359     7057|7935    6290|7083     198|116   \n",
-       "8                   14455|5814     9045|6579    8214|6024      231|66   \n",
-       "9                   15428|6239     9112|7376    8256|6705      224|94   \n",
-       "10                  15435|6302     9659|7125    8761|6485      221|87   \n",
-       "11                  21762|9081   13585|10286   12330|9251     302|145   \n",
+       "   snp_transition_transversion       total_het_hom         snp_het_hom  \\\n",
+       "0            2.41 (16969/7054)   1.36 (10718/7898)    1.36 (9729/7144)   \n",
+       "1            2.38 (22790/9589)  1.32 (14288/10835)   1.32 (12891/9739)   \n",
+       "2            2.39 (22316/9338)  1.34 (14172/10542)   1.35 (12726/9458)   \n",
+       "3           2.35 (27387/11651)  1.39 (17992/12977)  1.39 (16009/11510)   \n",
+       "4            2.48 (12222/4926)    1.27 (7327/5748)    1.26 (6639/5253)   \n",
+       "5            2.36 (22773/9639)   1.4 (14808/10579)    1.4 (13331/9536)   \n",
+       "6            2.1 (25705/12262)  0.82 (12251/14997)   0.8 (10881/13538)   \n",
+       "7            2.22 (14105/6359)    0.89 (7057/7935)    0.89 (6290/7083)   \n",
+       "8            2.49 (14455/5814)    1.37 (9045/6579)    1.36 (8214/6024)   \n",
+       "9            2.47 (15428/6239)    1.24 (9112/7376)    1.23 (8256/6705)   \n",
+       "10           2.45 (15435/6302)    1.36 (9659/7125)    1.35 (8761/6485)   \n",
+       "11            2.4 (21762/9081)  1.32 (13585/10286)   1.33 (12330/9251)   \n",
        "\n",
-       "   Insert_het_hom del_het_hom Indel_het_hom insert_del indel_snp_plus_mnp  \n",
-       "0         323|322     389|302         23|26    645|691         1385|17231  \n",
-       "1         480|469     497|447         49|32    949|944         1974|23149  \n",
-       "2         472|462     560|422         46|33    934|982         1995|22719  \n",
-       "3         614|615     807|626         78|50  1229|1433         2790|28179  \n",
-       "4         198|205     266|196         16|15    403|462          896|12179  \n",
-       "5         475|439     559|427         52|36    914|986         1988|23399  \n",
-       "6         438|598     522|603         41|48  1036|1125         2250|24998  \n",
-       "7         260|338     292|368         17|30    598|660         1305|13687  \n",
-       "8         267|227     309|240         24|22    494|549         1089|14535  \n",
-       "9         265|261     342|287         25|29    526|629         1209|15279  \n",
-       "10        286|259     369|266         22|28    545|635         1230|15554  \n",
-       "11        414|459     503|397         36|34    873|900         1843|22028  "
+       "       mnp_het_hom  Insert_het_hom     del_het_hom Indel_het_hom  \\\n",
+       "0   2.44 (254/104)   1.0 (323/322)  1.29 (389/302)  0.88 (23/26)   \n",
+       "1   2.51 (371/148)  1.02 (480/469)  1.11 (497/447)  1.53 (49/32)   \n",
+       "2    2.2 (368/167)  1.02 (472/462)  1.33 (560/422)  1.39 (46/33)   \n",
+       "3   2.75 (484/176)   1.0 (614/615)  1.29 (807/626)  1.56 (78/50)   \n",
+       "4    2.63 (208/79)  0.97 (198/205)  1.36 (266/196)  1.07 (16/15)   \n",
+       "5   2.77 (391/141)  1.08 (475/439)  1.31 (559/427)  1.44 (52/36)   \n",
+       "6   1.76 (369/210)  0.73 (438/598)  0.87 (522/603)  0.85 (41/48)   \n",
+       "7   1.71 (198/116)  0.77 (260/338)  0.79 (292/368)  0.57 (17/30)   \n",
+       "8     3.5 (231/66)  1.18 (267/227)  1.29 (309/240)  1.09 (24/22)   \n",
+       "9    2.38 (224/94)  1.02 (265/261)  1.19 (342/287)  0.86 (25/29)   \n",
+       "10   2.54 (221/87)   1.1 (286/259)  1.39 (369/266)  0.79 (22/28)   \n",
+       "11  2.08 (302/145)   0.9 (414/459)  1.27 (503/397)  1.06 (36/34)   \n",
+       "\n",
+       "          insert_del indel_snp_plus_mnp     sample  \n",
+       "0     0.93 (645/691)  0.08 (1385/17231)  ERR696683  \n",
+       "1     1.01 (949/944)  0.09 (1974/23149)  ERR753368  \n",
+       "2     0.95 (934/982)  0.09 (1995/22719)  ERR753369  \n",
+       "3   0.86 (1229/1433)   0.1 (2790/28179)  ERR753370  \n",
+       "4     0.87 (403/462)   0.07 (896/12179)  ERR753371  \n",
+       "5     0.93 (914/986)  0.08 (1988/23399)  ERR753372  \n",
+       "6   0.92 (1036/1125)  0.09 (2250/24998)  ERR753373  \n",
+       "7     0.91 (598/660)   0.1 (1305/13687)  ERR753374  \n",
+       "8      0.9 (494/549)  0.07 (1089/14535)  ERR753375  \n",
+       "9     0.84 (526/629)  0.08 (1209/15279)  ERR753376  \n",
+       "10    0.86 (545/635)  0.08 (1230/15554)  ERR753377  \n",
+       "11    0.97 (873/900)  0.08 (1843/22028)  ERR753378  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vcf_stats.r_snp_transition_transversion.astype('string')vcf_stats.snp_transition_transversion  "
+    "vcf_stats"
    ]
   }
  ],
