cambios en los Graficos de vcf ratios

--- a/code/analysis/notebooks/annotations.ipynb
+++ b/code/analysis/notebooks/annotations.ipynb
@@ -2389,7 +2389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2442,13 +2442,36 @@
        "CompletedProcess(args=['Rscript', '../scripts_analysis/08ploting_vcfstats.R'], returncode=0)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "subprocess.run([\"Rscript\", \"../scripts_analysis/08ploting_vcfstats.R\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p align=\"center\">\n",
+    " \n",
+    "  <img src=\"../results_analysis/plots/ratios_vcf.png\" alt=\"800\" width=\"900\" />\n",
+    "\n",
+    "</p>\n",
+    "\n",
+    "<p align=\"center\">\n",
+    " \n",
+    "  <img src=\"../results_analysis/plots/ratios_het_hom_total_vcf.png\" alt=\"800\" width=\"900\" />\n",
+    "\n",
+    "</p>\n",
+    "\n",
+    "<p align=\"center\">\n",
+    " \n",
+    "  <img src=\"../results_analysis/plots/ratios_het_hom_vcf.png\" alt=\"800\" width=\"900\" />\n",
+    "\n",
+    "</p>"
    ]
   }
  ],
