--- a/code/analysis/notebooks/annotations.ipynb
+++ b/code/analysis/notebooks/annotations.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2472,6 +2472,35 @@
     "  <img src=\"../results_analysis/plots/ratios_het_hom_vcf.png\" alt=\"800\" width=\"900\" />\n",
     "\n",
     "</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "../scripts_analysis/09statistical_analysis.R: línea 3: error sintáctico cerca del elemento inesperado `tidyverse'\n",
+      "../scripts_analysis/09statistical_analysis.R: línea 3: `library(tidyverse)'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CompletedProcess(args=['bash', '../scripts_analysis/09statistical_analysis.R'], returncode=2)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Statisticall analysis from the last plot\n",
+    "subprocess.run([\"Rscript\", \"../scripts_analysis/09statistical_analysis.R\"])"
    ]
   }
  ],
