Analisis estadistico, table

--- a/code/analysis/notebooks/annotations.ipynb
+++ b/code/analysis/notebooks/annotations.ipynb
@@ -2476,24 +2476,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../scripts_analysis/09statistical_analysis.R: línea 3: error sintáctico cerca del elemento inesperado `tidyverse'\n",
-      "../scripts_analysis/09statistical_analysis.R: línea 3: `library(tidyverse)'\n"
+      "[1] \"===> Total values\"\n",
+      "[1] 60\n",
+      "[1] \"===> Total values pre group\"\n",
+      "# A tibble: 5 × 2\n",
+      "  het_hom              n\n",
+      "  <chr>            <int>\n",
+      "1 r_Indel_het_hom     12\n",
+      "2 r_Insert_het_hom    12\n",
+      "3 r_del_het_hom       12\n",
+      "4 r_mnp_het_hom       12\n",
+      "5 r_snp_het_hom       12\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "CompletedProcess(args=['bash', '../scripts_analysis/09statistical_analysis.R'], returncode=2)"
+       "CompletedProcess(args=['Rscript', '../scripts_analysis/09statistical_analysis.R'], returncode=1)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
