--- a/code/analysis/notebooks/annotations.ipynb
+++ b/code/analysis/notebooks/annotations.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2476,9 +2476,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "── Attaching packages ─────────────────────────────────────── tidyverse 1.3.2 ──\n",
+      "✔ ggplot2 3.4.2     ✔ purrr   1.0.1\n",
+      "✔ tibble  3.2.1     ✔ dplyr   1.1.2\n",
+      "✔ tidyr   1.3.0     ✔ stringr 1.5.0\n",
+      "✔ readr   2.1.4     ✔ forcats 1.0.0\n",
+      "── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "✖ dplyr::filter() masks stats::filter()\n",
+      "✖ dplyr::lag()    masks stats::lag()\n",
+      "Warning messages:\n",
+      "1: package ‘ggplot2’ was built under R version 4.2.3 \n",
+      "2: package ‘tibble’ was built under R version 4.2.3 \n",
+      "3: package ‘tidyr’ was built under R version 4.2.3 \n",
+      "4: package ‘readr’ was built under R version 4.2.3 \n",
+      "5: package ‘purrr’ was built under R version 4.2.3 \n",
+      "6: package ‘dplyr’ was built under R version 4.2.3 \n",
+      "7: package ‘stringr’ was built under R version 4.2.3 \n",
+      "8: package ‘forcats’ was built under R version 4.2.3 \n",
+      "New names:\n",
+      "• `` -> `...1`\n",
+      "Rows: 12 Columns: 11\n",
+      "── Column specification ────────────────────────────────────────────────────────\n",
+      "Delimiter: \"\\t\"\n",
+      "chr  (1): sample\n",
+      "dbl (10): ...1, r_snp_transition_transversion, r_total_het_hom, r_snp_het_ho...\n",
+      "\n",
+      "ℹ Use `spec()` to retrieve the full column specification for this data.\n",
+      "ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -2493,16 +2526,40 @@
       "2 r_Insert_het_hom    12\n",
       "3 r_del_het_hom       12\n",
       "4 r_mnp_het_hom       12\n",
-      "5 r_snp_het_hom       12\n"
+      "5 r_snp_het_hom       12\n",
+      "[1] \"=------------------------------------=\"\n",
+      "[1] \"===>           Normality          <===\"\n",
+      "[1] \"=------------------------------------=\"\n",
+      "\n",
+      "\tShapiro-Wilk normality test\n",
+      "\n",
+      "data:  vcf_stats$num\n",
+      "W = 0.8368, p-value = 1.27e-06\n",
+      "\n",
+      "# A tibble: 5 × 4\n",
+      "  het_hom          variable statistic        p\n",
+      "  <chr>            <chr>        <dbl>    <dbl>\n",
+      "1 r_Indel_het_hom  num          0.929 0.365   \n",
+      "2 r_Insert_het_hom num          0.913 0.231   \n",
+      "3 r_del_het_hom    num          0.786 0.00658 \n",
+      "4 r_mnp_het_hom    num          0.946 0.584   \n",
+      "5 r_snp_het_hom    num          0.689 0.000667\n",
+      "[1] \"=------------------------------------=\"\n",
+      "[1] \"===>      Kruskal_Wallis/Dunnet   <===\"\n",
+      "[1] \"=------------------------------------=\"\n",
+      "# A tibble: 1 × 6\n",
+      "  .y.       n statistic    df           p method        \n",
+      "* <chr> <int>     <dbl> <int>       <dbl> <chr>         \n",
+      "1 num      60      34.8     4 0.000000511 Kruskal-Wallis\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "CompletedProcess(args=['Rscript', '../scripts_analysis/09statistical_analysis.R'], returncode=1)"
+       "CompletedProcess(args=['Rscript', '../scripts_analysis/09statistical_analysis.R'], returncode=0)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
