Errata en el plot

--- a/code/analysis/notebooks/annotations.ipynb
+++ b/code/analysis/notebooks/annotations.ipynb
@@ -2389,7 +2389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2442,7 +2442,7 @@
        "CompletedProcess(args=['Rscript', '../scripts_analysis/08ploting_vcfstats.R'], returncode=0)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2455,6 +2455,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<p align=\"center\">\n",
+    " \n",
+    "  <img src=\"../results_analysis/plots/vcf_basic_stats.png\" alt=\"800\" width=\"900\" />\n",
+    "\n",
+    "</p>\n",
+    "\n",
     "<p align=\"center\">\n",
     " \n",
     "  <img src=\"../results_analysis/plots/ratios_vcf.png\" alt=\"800\" width=\"900\" />\n",
@@ -2476,7 +2482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2559,7 +2565,7 @@
        "CompletedProcess(args=['Rscript', '../scripts_analysis/09statistical_analysis.R'], returncode=0)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2567,6 +2573,17 @@
    "source": [
     "## Statisticall analysis from the last plot\n",
     "subprocess.run([\"Rscript\", \"../scripts_analysis/09statistical_analysis.R\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p align=\"center\">\n",
+    " \n",
+    "  <img src=\"../results_analysis/plots/statistics_vcf_inference.png\" alt=\"800\" width=\"900\" />\n",
+    "\n",
+    "</p>\n"
    ]
   }
  ],
