retocar las instrucciones

--- a/code/analysis/notebooks/instructions.ipynb
+++ b/code/analysis/notebooks/instructions.ipynb
@@ -13,6 +13,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* Clone the repository"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "git clone https://github.com/Juankkar/TFM.git"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## First time running the workflow (ie. chr3)"
    ]
   },
@@ -147,23 +167,23 @@
     "# 3 rule reference_genome\n",
     "snakemake --cores 1 data/reference/genome.fa\n",
     "# 4 rule fastqc\n",
-    "snakemake --cores 1 results/fastqc_result/ERR696683_chr3_1_fastqc.html ; snakemake --cores 1 results/fastqc_result/ERR7533{68..78}_chr3_1_fastqc.html  \n",
+    "snakemake --cores 1 results/fastqc_result/ERR696683_chr3_1_fastqc.html results/fastqc_result/ERR7533{68..78}_chr3_1_fastqc.html  \n",
     "# 5 rule fastp\n",
-    "snakemake --cores 1 data/processed/ERR696683_chr3_1_fastp.fastq.gz ; snakemake --cores 1 data/processed/ERR7533{68..78}_chr3_1_fastp.fastq.gz  \n",
+    "snakemake --cores 1 data/processed/ERR696683_chr3_1_fastp.fastq.gz data/processed/ERR7533{68..78}_chr3_1_fastp.fastq.gz  \n",
     "# 6 rule fastqc_trimmed\n",
-    "snakemake --cores 1 results/fastqc_result/trimmed/ERR696683_chr3_1_fastp_fastqc.html ; snakemake --cores 1 results/fastqc_result/trimmed/ERR7533{68..78}_chr3_1_fastp_fastqc.html  \n",
+    "snakemake --cores 1 results/fastqc_result/trimmed/ERR696683_chr3_1_fastp_fastqc.html results/fastqc_result/trimmed/ERR7533{68..78}_chr3_1_fastp_fastqc.html  \n",
     "# 7 rule bwa_mapping\n",
-    "snakemake --cores 1 results/mapped_reads/ERR696683_chr3_sorted.sam ; snakemake --cores 1 results/mapped_reads/ERR7533{68..78}_chr3_sorted.sam  \n",
+    "snakemake --cores 1 results/mapped_reads/ERR696683_chr3_sorted.sam results/mapped_reads/ERR7533{68..78}_chr3_sorted.sam  \n",
     "# 8 rule sam_to_bam\n",
-    "snakemake --cores 1 results/mapped_reads/bam_files/ERR696683_chr3_sorted.bam ; snakemake --cores 1 results/mapped_reads/bam_files/ERR7533{68..78}_chr3_sorted.bam  \n",
+    "snakemake --cores 1 results/mapped_reads/bam_files/ERR696683_chr3_sorted.bam results/mapped_reads/bam_files/ERR7533{68..78}_chr3_sorted.bam  \n",
     "# 9 rule delete_duplicates\n",
-    "snakemake --cores 1 results/mapped_reads/bam_files/ERR696683_chr3_dedup.bam ; snakemake --cores 1 results/mapped_reads/bam_files/ERR7533{68..78}_chr3_dedup.bam  \n",
+    "snakemake --cores 1 results/mapped_reads/bam_files/ERR696683_chr3_dedup.bam results/mapped_reads/bam_files/ERR7533{68..78}_chr3_dedup.bam  \n",
     "# 10 rule extracting_variants\n",
-    "snakemake --cores 1 results/variants/ERR696683_chr3.vcf ; snakemake --cores 1 results/variants/ERR7533{68..78}_chr3.vcf \n",
+    "snakemake --cores 1 results/variants/ERR696683_chr3.vcf results/variants/ERR7533{68..78}_chr3.vcf \n",
     "# 11 rule vep_install_db\n",
     "snakemake --cores 1 vep_install_db\n",
     "# 12 rule vep_cli\n",
-    "snakemake --cores 1 results/variants/vep/ERR696683_chr3.txt --use-conda ; snakemake --cores 1 results/variants/vep/ERR7533{68..78}_chr3.txt --use-conda\n",
+    "snakemake --cores 1 results/variants/vep/ERR696683_chr3.txt results/variants/vep/ERR7533{68..78}_chr3.txt --use-conda\n",
     "# 13 rule parsing_dataR\n",
     "snakemake --cores 1 parsing_dataR --use-conda"
    ]
@@ -198,21 +218,21 @@
     "# 3 rule reference_genome\n",
     "snakemake --cores 1 data/reference/genome.fa --force ## if you haven't delete the contente of data/reference \n",
     "# 4 rule fastqc\n",
-    "snakemake --cores 1 results/fastqc_result/ERR696683_chrx_1_fastqc.html ; snakemake --cores 1 results/fastqc_result/ERR7533{68..78}_chrx_1_fastqc.html  \n",
+    "snakemake --cores 1 results/fastqc_result/ERR696683_chrx_1_fastqc.html results/fastqc_result/ERR7533{68..78}_chrx_1_fastqc.html  \n",
     "# 5 rule fastp\n",
-    "snakemake --cores 1 data/processed/ERR696683_chrx_1_fastp.fastq.gz ; snakemake --cores 1 data/processed/ERR7533{68..78}_chrx_1_fastp.fastq.gz  \n",
+    "snakemake --cores 1 data/processed/ERR696683_chrx_1_fastp.fastq.gz data/processed/ERR7533{68..78}_chrx_1_fastp.fastq.gz  \n",
     "# 6 rule fastqc_trimmed\n",
-    "snakemake --cores 1 results/fastqc_result/trimmed/ERR696683_chrx_1_fastp_fastqc.html ; snakemake --cores 1 results/fastqc_result/trimmed/ERR7533{68..78}_chrx_1_fastp_fastqc.html  \n",
+    "snakemake --cores 1 results/fastqc_result/trimmed/ERR696683_chrx_1_fastp_fastqc.html results/fastqc_result/trimmed/ERR7533{68..78}_chrx_1_fastp_fastqc.html  \n",
     "# 7 rule bwa_mapping\n",
-    "snakemake --cores 1 results/mapped_reads/ERR696683_chrx_sorted.sam ; snakemake --cores 1 results/mapped_reads/ERR7533{68..78}_chrx_sorted.sam  \n",
+    "snakemake --cores 1 results/mapped_reads/ERR696683_chrx_sorted.sam results/mapped_reads/ERR7533{68..78}_chrx_sorted.sam  \n",
     "# 8 rule sam_to_bam\n",
-    "snakemake --cores 1 results/mapped_reads/bam_files/ERR696683_chrx_sorted.bam ; snakemake --cores 1 results/mapped_reads/bam_files/ERR7533{68..78}_chrx_sorted.bam  \n",
+    "snakemake --cores 1 results/mapped_reads/bam_files/ERR696683_chrx_sorted.bam results/mapped_reads/bam_files/ERR7533{68..78}_chrx_sorted.bam  \n",
     "# 9 rule delete_duplicates\n",
-    "snakemake --cores 1 results/mapped_reads/bam_files/ERR696683_chrx_dedup.bam ; snakemake --cores 1 results/mapped_reads/bam_files/ERR7533{68..78}_chrx_dedup.bam  \n",
+    "snakemake --cores 1 results/mapped_reads/bam_files/ERR696683_chrx_dedup.bam results/mapped_reads/bam_files/ERR7533{68..78}_chrx_dedup.bam  \n",
     "# 10 rule extracting_variants\n",
-    "snakemake --cores 1 results/variants/ERR696683_chrx.vcf ; snakemake --cores 1 results/variants/ERR7533{68..78}_chrx.vcf \n",
+    "snakemake --cores 1 results/variants/ERR696683_chrx.vcf results/variants/ERR7533{68..78}_chrx.vcf \n",
     "# 12 rule vep_cli\n",
-    "snakemake --cores 1 results/variants/vep/ERR696683_chrx.txt --use-conda ; snakemake --cores 1 results/variants/vep/ERR7533{68..78}_chrx.txt --use-conda\n",
+    "snakemake --cores 1 results/variants/vep/ERR696683_chrx.txt results/variants/vep/ERR7533{68..78}_chrx.txt --use-conda\n",
     "# 13 rule parsing_dataR\n",
     "snakemake --cores 1 parsing_dataR --use-conda"
    ]
