Restructuración de los programas

--- a/code/analysis/notebooks/instructions.ipynb
+++ b/code/analysis/notebooks/instructions.ipynb
@@ -33,6 +33,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* Install all Conda enviroments, choose to use conda or mamba:\n",
+    "\n",
+    "* Command ```mamba env install -f env.yml```\n",
+    "\n",
+    "    * [Gereference_tools](../../environments/Greference_tools.yml)\n",
+    "    * [vep](../../environments/vep.yml)\n",
+    "    * [biostatistcsR](../../environments/biostatisticsR.yml)\n",
+    "    * [igv_viz](../../environments/igv_viz.yml)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## First time running the workflow (ie. chr3)"
    ]
   },
