--- a/code/analysis/notebooks/annotations.ipynb
+++ b/code/analysis/notebooks/annotations.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2389,30 +2389,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "── Attaching packages ─────────────────────────────────────── tidyverse 1.3.2 ──\n",
-      "✔ ggplot2 3.4.2     ✔ purrr   1.0.1\n",
-      "✔ tibble  3.2.1     ✔ dplyr   1.1.2\n",
-      "✔ tidyr   1.3.0     ✔ stringr 1.5.0\n",
-      "✔ readr   2.1.4     ✔ forcats 1.0.0\n",
-      "── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "✖ dplyr::filter() masks stats::filter()\n",
-      "✖ dplyr::lag()    masks stats::lag()\n",
-      "Warning messages:\n",
-      "1: package ‘ggplot2’ was built under R version 4.2.3 \n",
-      "2: package ‘tibble’ was built under R version 4.2.3 \n",
-      "3: package ‘tidyr’ was built under R version 4.2.3 \n",
-      "4: package ‘readr’ was built under R version 4.2.3 \n",
-      "5: package ‘purrr’ was built under R version 4.2.3 \n",
-      "6: package ‘dplyr’ was built under R version 4.2.3 \n",
-      "7: package ‘stringr’ was built under R version 4.2.3 \n",
-      "8: package ‘forcats’ was built under R version 4.2.3 \n",
       "Rows: 12 Columns: 8\n",
       "── Column specification ────────────────────────────────────────────────────────\n",
       "Delimiter: \"\\t\"\n",
@@ -2442,7 +2425,7 @@
        "CompletedProcess(args=['Rscript', '../scripts_analysis/08ploting_vcfstats.R'], returncode=0)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2482,42 +2465,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "── Attaching packages ─────────────────────────────────────── tidyverse 1.3.2 ──\n",
-      "✔ ggplot2 3.4.2     ✔ purrr   1.0.1\n",
-      "✔ tibble  3.2.1     ✔ dplyr   1.1.2\n",
-      "✔ tidyr   1.3.0     ✔ stringr 1.5.0\n",
-      "✔ readr   2.1.4     ✔ forcats 1.0.0\n",
-      "── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "✖ dplyr::filter() masks stats::filter()\n",
-      "✖ dplyr::lag()    masks stats::lag()\n",
-      "Warning messages:\n",
-      "1: package ‘ggplot2’ was built under R version 4.2.3 \n",
-      "2: package ‘tibble’ was built under R version 4.2.3 \n",
-      "3: package ‘tidyr’ was built under R version 4.2.3 \n",
-      "4: package ‘readr’ was built under R version 4.2.3 \n",
-      "5: package ‘purrr’ was built under R version 4.2.3 \n",
-      "6: package ‘dplyr’ was built under R version 4.2.3 \n",
-      "7: package ‘stringr’ was built under R version 4.2.3 \n",
-      "8: package ‘forcats’ was built under R version 4.2.3 \n",
-      "New names:\n",
-      "• `` -> `...1`\n",
-      "Rows: 12 Columns: 11\n",
-      "── Column specification ────────────────────────────────────────────────────────\n",
-      "Delimiter: \"\\t\"\n",
-      "chr  (1): sample\n",
-      "dbl (10): ...1, r_snp_transition_transversion, r_total_het_hom, r_snp_het_ho...\n",
-      "\n",
-      "ℹ Use `spec()` to retrieve the full column specification for this data.\n",
-      "ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -2556,7 +2506,20 @@
       "# A tibble: 1 × 6\n",
       "  .y.       n statistic    df           p method        \n",
       "* <chr> <int>     <dbl> <int>       <dbl> <chr>         \n",
-      "1 num      60      34.8     4 0.000000511 Kruskal-Wallis\n"
+      "1 num      60      34.8     4 0.000000511 Kruskal-Wallis\n",
+      "# A tibble: 10 × 9\n",
+      "   .y.   group1        group2    n1    n2 statistic       p   p.adj p.adj.signif\n",
+      " * <chr> <chr>         <chr>  <int> <int>     <dbl>   <dbl>   <dbl> <chr>       \n",
+      " 1 num   r_del_het_hom r_Ind…    12    12    -0.719 4.72e-1 1   e+0 ns          \n",
+      " 2 num   r_del_het_hom r_Ins…    12    12    -1.85  6.47e-2 6.47e-1 ns          \n",
+      " 3 num   r_del_het_hom r_mnp…    12    12     3.71  2.10e-4 2.10e-3 **          \n",
+      " 4 num   r_del_het_hom r_snp…    12    12     0.555 5.79e-1 1   e+0 ns          \n",
+      " 5 num   r_Indel_het_… r_Ins…    12    12    -1.13  2.59e-1 1   e+0 ns          \n",
+      " 6 num   r_Indel_het_… r_mnp…    12    12     4.43  9.64e-6 9.64e-5 ****        \n",
+      " 7 num   r_Indel_het_… r_snp…    12    12     1.27  2.03e-1 1   e+0 ns          \n",
+      " 8 num   r_Insert_het… r_mnp…    12    12     5.55  2.80e-8 2.80e-7 ****        \n",
+      " 9 num   r_Insert_het… r_snp…    12    12     2.40  1.63e-2 1.63e-1 ns          \n",
+      "10 num   r_mnp_het_hom r_snp…    12    12    -3.15  1.63e-3 1.63e-2 *           \n"
      ]
     },
     {
@@ -2565,7 +2528,7 @@
        "CompletedProcess(args=['Rscript', '../scripts_analysis/09statistical_analysis.R'], returncode=0)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
