--- a/code/analysis/notebooks/annotations.ipynb
+++ b/code/analysis/notebooks/annotations.ipynb
@@ -950,6 +950,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## **Plot of the rules from the snakemake pipeline**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CompletedProcess(args=['python', '../scripts_analysis/workflow_viz.py'], returncode=0)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subprocess.run([\"python\", \"../scripts_analysis/workflow_viz.py\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p align=\"center\">\n",
+    " \n",
+    "  <img src=\"../results_analysis/plots/snakemake_rules_linear.png\" alt=\"800\" width=\"900\" />\n",
+    "\n",
+    "</p>\n",
+    "\n",
+    "Plot to show the structure to follow of the pipline\n",
+    "\n",
+    "* Color *green*: you have to execute **multiple** times this rule (as much chromosomes/genes you want to filter).\n",
+    "\n",
+    "* Color *orange*: you have to execute only **1** time, the first run of the workflow.\n",
+    "\n",
+    "* Color *red*: you have to execute only **1** time, the last run, after having all genes filter tables."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## **Calculating the AVERAGE sequence length for each sample**  "
    ]
   },
