--- a/code/analysis/notebooks/instructions.ipynb
+++ b/code/analysis/notebooks/instructions.ipynb
@@ -194,8 +194,8 @@
     "snakemake --cores 1 results/mapped_reads/bam_files/ERR696683_chr3_dedup.bam results/mapped_reads/bam_files/ERR7533{68..78}_chr3_dedup.bam  \n",
     "# 10 rule extracting_variants\n",
     "snakemake --cores 1 results/variants/ERR696683_chr3.vcf results/variants/ERR7533{68..78}_chr3.vcf \n",
-    "# 11 rule vep_install_db\n",
-    "snakemake --cores 1 vep_install_db\n",
+    "# 11 rule vep_install_db: GRCh38 = 109 will ask you if you want new version, press n\n",
+    "snakemake --cores 1 vep_install_db --use-conda\n",
     "# 12 rule vep_cli\n",
     "snakemake --cores 1 results/variants/vep/ERR696683_chr3.txt results/variants/vep/ERR7533{68..78}_chr3.txt --use-conda\n",
     "# 13 rule parsing_dataR\n",
@@ -255,7 +255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## After all chromosomes tables are created\n",
+    "## After all gene tables are created\n",
     "\n",
     "* In this case you can execute the last rule, for plotting your data in ggplot2"
    ]
