Deshacernos de your_sample_list, todo en  config, y unas correcciones

--- a/code/analysis/notebooks/instructions.ipynb
+++ b/code/analysis/notebooks/instructions.ipynb
@@ -40,7 +40,9 @@
     "    * [Gereference_tools](../../environments/Greference_tools.yml)\n",
     "    * [vep](../../environments/vep.yml)\n",
     "    * [biostatistcsR](../../environments/biostatisticsR.yml)\n",
-    "    * [igv_viz](../../environments/igv_viz.yml)"
+    "    * [igv_viz](../../environments/igv_viz.yml)\n",
+    "\n",
+    "* Activate the first environment ```conda activate Greference_tools```."
    ]
   },
   {
@@ -54,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is how your config file and your_sample_list should look like:"
+    "This is how your config file should look like:"
    ]
   },
   {
@@ -79,18 +81,18 @@
     "#########################\n",
     "\n",
     "samples:\n",
-    "  ERR696683_chr3: data/original_bam/filtering/ERR696683_chr3_sorted.bam \n",
-    "  ERR753368_chr3: data/original_bam/filtering/ERR753368_chr3_sorted.bam \n",
-    "  ERR753369_chr3: data/original_bam/filtering/ERR753369_chr3_sorted.bam\n",
-    "  ERR753370_chr3: data/original_bam/filtering/ERR753370_chr3_sorted.bam\n",
-    "  ERR753371_chr3: data/original_bam/filtering/ERR753371_chr3_sorted.bam\n",
-    "  ERR753372_chr3: data/original_bam/filtering/ERR753372_chr3_sorted.bam\n",
-    "  ERR753373_chr3: data/original_bam/filtering/ERR753373_chr3_sorted.bam\n",
-    "  ERR753374_chr3: data/original_bam/filtering/ERR753374_chr3_sorted.bam\n",
-    "  ERR753375_chr3: data/original_bam/filtering/ERR753375_chr3_sorted.bam\n",
-    "  ERR753376_chr3: data/original_bam/filtering/ERR753376_chr3_sorted.bam\n",
-    "  ERR753377_chr3: data/original_bam/filtering/ERR753377_chr3_sorted.bam\n",
-    "  ERR753378_chr3: data/original_bam/filtering/ERR753378_chr3_sorted.bam\n",
+    "  ERR696683_chr3\n",
+    "  ERR753368_chr3\n",
+    "  ERR753369_chr3\n",
+    "  ERR753370_chr3\n",
+    "  ERR753371_chr3\n",
+    "  ERR753372_chr3\n",
+    "  ERR753373_chr3\n",
+    "  ERR753374_chr3\n",
+    "  ERR753375_chr3\n",
+    "  ERR753376_chr3\n",
+    "  ERR753377_chr3\n",
+    "  ERR753378_chr3\n",
     "\n",
     "########################\n",
     "##  SNAKEFILE PARAMS  ##\n",
@@ -130,38 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* your_sample_list.txt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "shellscript"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "ERR696683_chr3\n",
-    "ERR753368_chr3\n",
-    "ERR753369_chr3\n",
-    "ERR753370_chr3\n",
-    "ERR753371_chr3\n",
-    "ERR753372_chr3\n",
-    "ERR753373_chr3\n",
-    "ERR753374_chr3\n",
-    "ERR753375_chr3\n",
-    "ERR753376_chr3\n",
-    "ERR753377_chr3\n",
-    "ERR753378_chr3"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Copy each command, one by one"
+    "* Copy each command in the CLI, one by one"
    ]
   },
   {
@@ -213,7 +184,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Change the values of the config.yaml and your_sample_list.\n",
+    "* Change the values of the config.yaml.\n",
     "* Chromosmes, reference genome and the gene that you are looking for "
    ]
   },
