--- a/code/analysis/notebooks/instructions.ipynb
+++ b/code/analysis/notebooks/instructions.ipynb
@@ -132,7 +132,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Copy each command in the CLI, one by one"
+    "* Copy each command in the CLI, one by one\n",
+    "\n",
+    "On the other hand, you could use the notebook [automate_snakemake](../../../auto_snakemake.ipynb) for a more automate version. It is true that it is not perfect, and if there are errors (problems downloading the data from the servers for example), could be a problem detecting them."
    ]
   },
   {
